--- a/src/Styles/MainContent.css
+++ b/src/Styles/MainContent.css
@@ -38,7 +38,7 @@
 }
 
 .MainContent__picture {
-    max-height: 90%;
+    max-height: 85%;
     width: auto;
     border-radius: 1rem;
     border: 4px solid black;
@@ -50,4 +50,5 @@
     flex-direction: column;
     align-items: center;
     padding-top: 2rem;
+    cursor: pointer;
 }
